ingress/ns-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ingress-basic
spec: {}
status: {}
