ingress/ingress-hygieia.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hygieia-ingress
  namespace: hygieia
  annotations:
    kubernetes.io/ingress.class: nginx-internal
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hygieia-ui-svc-ci
          servicePort: 80
        path: /hygieia
